3/4 modifs doc librairie api

--- a/documentation/Env/Env_ContentCategory.html
+++ b/documentation/Env/Env_ContentCategory.html
@@ -149,7 +149,7 @@ $categories = array(1111 =&gt; array(&quot;label&quot; =&gt; &quot;First categor
 
 	<!-- ========== Info from phpDoc block ========= -->
 <p class="short-description">La variable avec les contenus (sous-catégories). Chaque contenu est attaché à une catégorie par l'identifiant de cette catégorie.</p>
-<p class="description"><p>Par exemple on récupère la catégorie dont l'identifient est égal à 1111.
+<p class="description"><p>Par exemple on récupère la catégorie dont l'identifiant est égal à 1111.
 Les contenus de cette catégorie vont être représentés de la manière suivante dans un tableau PHP:
 <br />$categories[1111] = array(0 =&gt; array(&quot;code&quot; =&gt; 11112, &quot;label&quot; =&gt; &quot;code 11112&quot;), 1 =&gt; array(&quot;code&quot; =&gt; 11113, &quot;label&quot; =&gt; &quot;code 11113&quot;))</p></p>
 	<ul class="tags">
@@ -265,7 +265,7 @@ Les contenus de cette catégorie vont être représentés de la manière suivant
 	</div> 
 	
 	<!-- ========== Info from phpDoc block ========= -->
-<p class="short-description">La méthode qui appelle l'API d'EnvoiMoinsCher pour récupérer la liste de toutes les contenus.</p>
+<p class="short-description">La méthode qui appelle l'API d'EnvoiMoinsCher pour récupérer la liste de tous les contenus.</p>
 	<ul class="tags">
 				<li><span class="field">access:</span> public</li>
 			</ul>
