--- a/documentation/Env/Env_Country.html
+++ b/documentation/Env/Env_Country.html
@@ -152,7 +152,7 @@ Cette dépendance est utilisée par la méthode getCountry($code))
 
 	<!-- ========== Info from phpDoc block ========= -->
 <p class="short-description">Le tableau avec tous les pays. La clé de chaque entrée est le code ISO unique du pays.
-<br />Par exemple pour l'entrée avec l'Argentine va se traduire ainsi dans le langage PHP : 
+<br />Par exemple, l'entrée de l'Argentine va se présenter ainsi dans le langage PHP : 
 <br />array("AR" => array("label" => "ARGENTINE" "code" => "AR" ))</p>
 	<ul class="tags">
 				<li><span class="field">access:</span> public</li>
@@ -175,7 +175,7 @@ Cette dépendance est utilisée par la méthode getCountry($code))
 	</div>
 
 	<!-- ========== Info from phpDoc block ========= -->
-<p class="short-description">Le tableau public avec les informations sur un seul pays. Peut-être un tableau multidimensionnel pour les pays comme l'Espagne à cause de sa
+<p class="short-description">Le tableau public avec les informations sur un seul pays. Peut être un tableau multidimensionnel pour les pays comme l'Espagne à cause de sa
 relation avec les Canaries.</p>
 	<ul class="tags">
 				<li><span class="field">access:</span> public</li>
