--- a/documentation/Env/Env_Quotation.html
+++ b/documentation/Env/Env_Quotation.html
@@ -195,7 +195,7 @@
 	</div>
 
 	<!-- ========== Info from phpDoc block ========= -->
-<p class="short-description">Le tableau qui contient les dimensions des palletes acceptées par EnvoiMoinsCher.com. Les dimensions sont données selon le format &quot;longueur cm x largeur cm&quot;. Elles sont classées en ordre décroissant, de la plus longue.</p>
+<p class="short-description">Le tableau qui contient les dimensions des palettes acceptées par EnvoiMoinsCher.com. Les dimensions sont données selon le format &quot;longueur cm x largeur cm&quot;. Elles sont classées en ordre décroissant.</p>
 <p class="description"><p><br />Pour passer une valeur correcte il faut utiliser la clé de $palletDimss dans le paramètre quot;pallet&quot; .   
 La requête correcte de l'envoi d'une palette va se présenter ainsi :   
 $quotInfo = array(&quot;collecte_date&quot; =&gt; &quot;2015-04-29&quot;, &quot;delay&quot; =&gt; 
