--- a/documentation/Env/Env_WebService.html
+++ b/documentation/Env/Env_WebService.html
@@ -25,7 +25,7 @@
 	<div class="info-box-body">
         		<!-- ========== Info from phpDoc block ========= -->
 <p class="short-description">EnvoiMoinsCher web service main class.</p>
-<p class="description"><p>La classe-parent de la librairie. Elle se charge 
+<p class="description"><p>La classe-mère de la librairie. Elle se charge 
 de l'interaction entre le serveur client et l'API.</p></p>
 	<ul class="tags">
 				<li><span class="field">author:</span> EnvoiMoinsCher &lt;<a href="mailto:dev@envoimoinscher.com">dev@envoimoinscher.com</a>&gt;</li>
@@ -316,7 +316,7 @@ de l'interaction entre le serveur client et l'API.</p></p>
 	</div>
 
 	<!-- ========== Info from phpDoc block ========= -->
-<p class="short-description">La variable qui détermine le hôte de l'API</p>
+<p class="short-description">La variable qui détermine l'hôte de l'API</p>
 	<ul class="tags">
 				<li><span class="field">access:</span> protected</li>
 			</ul>
@@ -439,7 +439,7 @@ qui se charge de remplir le tableau contenant les messages d'erreur.</p></p>
 	<!-- ========== Info from phpDoc block ========= -->
 <p class="short-description">La méthode qui parse la réponse du serveur.</p>
 <p class="description"><p><br />Au début on vérifie si la réponse ne contient pas la balise &lt;error /&gt; . 
-Si elle ne la contient pas, on ne fait rien <br />
+Si elle ne la contient pas, on ne fait rien. <br />
 Sinon, on change $respError en true, parse la réponse et 
 définit les messages d'erreur dans le tableau $respErrorsList.</p></p>
 	<ul class="tags">
