--- a/documentation/blank.html
+++ b/documentation/blank.html
@@ -8,9 +8,14 @@
 <div align="center"><h1>Documentation</h1></div>
 <b>Voici la documentation de la librairie PHP pour l'API d'<a href="http://www.envoimoinscher.com">EnvoiMoinsCher</a>.
 </b><br /><br />
-Vous pouvez chercher les informations qui vous intéressent dans la colonne gauche où sont répertoriés les classes et les fichiers de la librairie.
+Vous pouvez chercher les informations qui vous intéressent dans la colonne de gauche où sont répertoriés les classes et les fichiers de la librairie.
 <br /><br />
-Si vous rencontrez le moindre problème, veuillez-nous en parler via l'adresse e-mail <a href="mailto:dev@boxtale.com">dev@boxtale.com</a> ou le numéro de téléphone +33 (0)1 75 77 37 96.
+Si vous rencontrez le moindre problème, n'hésitez pas à nous contacter : 
+        <ul>
+          <li><a href="mailto:dev@boxtale.com">dev@boxtale.com</a></li>
+          <li>par téléphone au +33 (0)1 75 77 37 96</li>
+          <li>via skype : dev_envoimoinscher</li>
+        </ul>
 <br /><br />
 <br /><br />
 <div align="center"><small>Le document généré avec <a href="http://www.phpdoc.org">phpDocumentor v1.4.3</a></small></div><br />
